nav z-index fix

--- a/src/style.css
+++ b/src/style.css
@@ -351,6 +351,7 @@ Utility Classes
 /* NAVIGATION */
 .navigation {
   display: none;
+  z-index: 98;
 }
 
 @media only screen and (max-width: 50em) {
@@ -391,7 +392,7 @@ Utility Classes
   top: 2.4rem;
   right: 8rem;
   /* border-radius: 50%; */
-  z-index: 13;
+  z-index: 100;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer;
@@ -430,7 +431,7 @@ Utility Classes
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 99;
   opacity: 0;
   width: 0;
   transition: all 0.8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
@@ -1130,7 +1131,7 @@ form button:hover .submit-icon {
 
 .captcha {
   position: absolute;
-  z-index: 100;
+  z-index: 10;
   margin: 4rem 0;
 }
 
